tests/baselines/reference/for-of10.errors.txt
tests/cases/conformance/es6/for-ofStatements/for-of10.ts(2,11): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.


==== tests/cases/conformance/es6/for-ofStatements/for-of10.ts (1 errors) ====
    var v: string;
    for (v of [0]) { }
              ~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.